Change header home banking background color to fix contrast errors.

--- a/css/src/_header.scss
+++ b/css/src/_header.scss
@@ -154,7 +154,7 @@ header {
 
 	.banking {
 		padding: 10px;
-		background: $purple;
+		background: darken( $purple, 10% );
 		position: relative;
 		color: white;
 
